more formatting
line length max is now 140 characters